refactor: move currency existence check from DAO to service layer